--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    compile "org.abimon:SpiralFormats:23"
+    compile "org.abimon:SpiralFormats:0f59272"
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 
     compile 'com.google.code.gson:gson:2.8.2'
